[Misc] Fix the misaligned notification dots

--- a/src/scss/modules/_header-customizer.scss
+++ b/src/scss/modules/_header-customizer.scss
@@ -46,6 +46,7 @@ nav.navigation {
 
                 position: absolute;
                 top: -3px;
+                right: 0;
             }
 
         }
